[BUGFIX] Invisible icon blocks mousefocus of non-required inputfields
Set z-index for clear.gif, so a backend user can select the text
inside input fields. Now it's also possible to set focus on the
input field by clicking at the beginning of it.

Fixes: #34042
Releases: 4.5, 6.0, 6.1, 6.2

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
@@ -540,3 +540,7 @@ img.t3-tceforms-sysfile-imagepreview {
 * html div#typo3-docbody table.typo3-TCEforms {
 	margin-top: 20px;
 }
+
+img[src*="clear.gif"] {
+	z-index: 0;
+}
